ru lang + fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <!-- Required meta tags -->
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/calender.css' %}">
-  <title>Django Calendar App</title>
+  <title>Calendar App</title>
 </head>
 <body>
 
