--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -1,35 +1,35 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Event Details
+Детали События
 {% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="clearfix">
-            <a class="btn btn-primary left" href="{% url 'calendarapp:calendar' %}"> Calendar </a>
-            <a class="btn btn-info right mr-2" href="{% url 'calendarapp:event_edit' event.pk %}"> Edit Event </a>
+            <a class="btn btn-primary left" href="{% url 'calendarapp:calendar' %}"> Календарь </a>
+            <a class="btn btn-info right mr-2" href="{% url 'calendarapp:event_edit' event.pk %}"> Изменить Событие </a>
         </div>
 
         <div class="clearfix">
-            <h3>Event Name: {{ event.title }}</h3>
-            <p>From <span style="color: gray;">{{ event.start_time }}</span> To <span style="color: gray;">{{ event.end_time }}</span></p>
+            <h3>Название события: {{ event.title }}</h3>
+            <p>С <span style="color: gray;">{{ event.start_time }}</span> До <span style="color: gray;">{{ event.end_time }}</span></p>
             <hr>
             <p>{{ event.description }}</p>
         </div>
         <hr>
         <div class="clearfix">
-            <h4 class="left" > Members of this Event</h4>
-            <a class="btn btn-success right" href="{% url 'calendarapp:add_eventmember' event.id %}"> Add Member </a>
+            <h4 class="left" > Участники События</h4>
+            <a class="btn btn-success right" href="{% url 'calendarapp:add_eventmember' event.id %}"> Добавить участника </a>
         </div>
         <table class="table table-bordered">
             <thead>
                 <tr>
                   <th style="width: 10px">#</th>
-                  <th>Name</th>
-                  <th>Username</th>
+                  <th>Имя</th>
+                  <th>Юзернейм</th>
                   <th>Email</th>
-                  <th>Action</th>
+                  <th>Действие</th>
                 </tr>
               </thead>
               <tbody>
@@ -40,7 +40,7 @@ Event Details
                     <td>{{ member.user.username }}</td>
                     <td>{{ member.user.email }}</td>
                     <td>
-                        <a class="btn btn-danger" href="{% url 'calendarapp:remove_event' member.id %}">Remove</a>
+                        <a class="btn btn-danger" href="{% url 'calendarapp:remove_event' member.id %}">Удалить</a>
                     </td>
                 </tr>
                 {% endfor %}
