--- a/templates/event.html
+++ b/templates/event.html
@@ -6,14 +6,14 @@ Event
 
 {% block content %}
 <div class="clearfix">
-  <a class="btn btn-info left" href="{% url 'calendarapp:calendar' %}"> Calendar </a>
+  <a class="btn btn-info left" href="{% url 'calendarapp:calendar' %}"> Календарь </a>
 </div>
 
 <form method="post">
   {% csrf_token %}
   <table class="form form-table">
     {{ form }}
-    <tr><td colspan="2"><button type="submit" class="btn btn-info right"> Submit </button></td></tr>
+    <tr><td colspan="2"><button type="submit" class="btn btn-info right"> Отправить </button></td></tr>
   </table>
 </form>
 {% endblock %}
