--- a/templates/event_delete.html
+++ b/templates/event_delete.html
@@ -2,13 +2,13 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Event Delete
+Удаление События
 {% endblock %}
 
 {% block content %}
     <h1>Delete</h1>
     <form action="" method="post">{% csrf_token %}
-        <p>Are you sure you want to delete this event?</p>
-        <button class="btn btn-danger ml-2" type="submit">Confirm</button>
+        <p>Вы уверены, что хотите удалить это событие?</p>
+        <button class="btn btn-danger ml-2" type="submit">Подтвердить</button>
     </form>
 {% endblock content %}
