--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% load static %}
     <head>
-        <meta name="description" content="Event Dashboard" />
+        <meta name="description" content="Список событий" />
         <!-- Twitter meta-->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:site" content="@sajib1066" />
@@ -13,7 +13,7 @@
         <meta property="og:title" content="Vali - Free Bootstrap 4 admin theme" />
         <meta property="og:url" content="https://sajib1066.github.io/" />
         <meta property="og:image" content="https://sajib1066.github.io/images/me.jpg" />
-        <meta property="og:description" content="Event Dashboard" />
+        <meta property="og:description" content="Список событий" />
         <title>{% block title %}{% endblock title  %}</title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
