--- a/templates/calendarapp/events_list.html
+++ b/templates/calendarapp/events_list.html
@@ -1,16 +1,16 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-{% block title %}Event List{% endblock title %}
+{% block title %}Список событий{% endblock title %}
 
 {% block breadcrumb %}
     <div>
-        <h1><i class="fa fa-dashboard"></i> Dashboard</h1>
-        <p>Event List</p>
+        <h1><i class="fa fa-dashboard"></i> Список событий</h1>
+        <p>Перечень выбранных событий</p>
     </div>
     <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-        <li class="breadcrumb-item"><a>Event List</a></li>
+        <li class="breadcrumb-item"><a>Список событий</a></li>
     </ul>
 {% endblock breadcrumb %}
 
